// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`put-document-domains should add a domain for a valid document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`put-document-domains should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
